Added more argument types

--- a/Test/RunTests.ipynb
+++ b/Test/RunTests.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.7.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -44,7 +44,8 @@
    "outputs": [],
    "source": [
     "# Change working directory to the PathTracer\n",
-    "os.chdir(\"C:/Users/mathias.gammelmark/Documents/repo/LightSourceImportanceSampling/PathTracer\")"
+    "#os.chdir(\"C:/Users/mathias.gammelmark/Documents/repo/LightSourceImportanceSampling/PathTracer\")\n",
+    "os.chdir(\"../PathTracer\")"
    ]
   },
   {
@@ -75,7 +76,14 @@
     "    return [\"-rot\", str(x), str(y), str(z)]\n",
     "\n",
     "def arg_output(filepath:str):\n",
-    "    return [\"-out\", filepath]"
+    "    return [\"-out\", filepath]\n",
+    "\n",
+    "def arg_outdir(filepath:str):\n",
+    "    if (filepath.endswith(\"/\")):\n",
+    "        return [\"-outdir\", filepath]\n",
+    "    else:\n",
+    "        return [\"-outdir\", filepath + \"/\"]\n",
+    "\n"
    ]
   },
   {
@@ -122,14 +130,7 @@
    "source": [
     "models = [\"../Assets/Models/Helix.obj\", \"../Assets/Models/CornellBox.obj\"]\n",
     "\n",
-    "args_scene = arg_scene(models)\n",
-    "\n",
-    "print(\"Running Pathtracer\")\n",
-    "run(args_scene + arg_num_samples(1))\n",
-    "print(\"Loading Image\")\n",
-    "resA = load_image_from_csv(\"../Test/Test.csv\")\n",
-    "show_img(resA)\n",
-    "\n"
+    "args_scene = arg_scene(models)"
    ]
   },
   {
@@ -138,11 +139,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Running Pathtracer\")\n",
-    "run(args_scene + arg_num_samples(1000))\n",
-    "print(\"Loading Image\")\n",
-    "resB = load_image_from_csv(\"../Test/Test.csv\")\n",
-    "show_img(resB)"
+    "print(\"Running Pathtracer: Lighttree\")\n",
+    "run(args_scene + arg_num_samples(100) + [\"-method\", \"lighttree\", \"-name\", \"Lighttree\"] + arg_outdir(\"../Test/Results/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Running Pathtracer: Energy\")\n",
+    "run(args_scene + arg_num_samples(100) + [\"-method\", \"energy\", \"-name\", \"Energy\"] + arg_outdir(\"../Test/Results/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Running Pathtracer: Naive\")\n",
+    "run(args_scene + arg_num_samples(100) + [\"-method\", \"naive\", \"-name\", \"Naive\"] + arg_outdir(\"../Test/Results/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Loading Images\")\n",
+    "resA = load_image_from_csv(\"../Test/Results/Lighttree.csv\")\n",
+    "resB = load_image_from_csv(\"../Test/Results/Energy.csv\")\n",
+    "resC = load_image_from_csv(\"../Test/Results/Naive.csv\")\n",
+    "\n",
+    "show_img(resA)\n",
+    "show_img(resB)\n",
+    "show_img(resC)"
    ]
   },
   {
