Added more testing

--- a/Test/RunTests.ipynb
+++ b/Test/RunTests.ipynb
@@ -139,6 +139,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "reference_count = 100000\n",
+    "def run_cornell_reference():\n",
+    "    models = arg_scene([\"../Assets/Models/Helix.obj\", \"../Assets/Models/CornellBox.obj\"])\n",
+    "    outdir = arg_outdir(\"../Test/Results/\")\n",
+    "    args = models + outdir\n",
+    "    args += arg_num_samples(reference_count)\n",
+    "    args += [\"-method\", \"naive\"]\n",
+    "    args += [\"-name\", \"cornell_ref\"]\n",
+    "    run(args)\n",
+    "\n",
+    "# Takes a very long time to compute\n",
+    "# run_cornell_reference()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_cornell_scene():\n",
+    "    models = arg_scene([\"../Assets/Models/Helix.obj\", \"../Assets/Models/CornellBox.obj\"])\n",
+    "    outdir = arg_outdir(\"../Test/Results/\")\n",
+    "\n",
+    "    for samples in [1,2,4,8,16,32,64,128]:\n",
+    "        args = models + outdir\n",
+    "        args += [\"-method\", \"lighttree\"]\n",
+    "        args += arg_num_samples(samples)\n",
+    "        args += [\"-name\", \"cornell_lighttree_samples_\" + str(samples)]\n",
+    "        run(args)\n",
+    "\n",
+    "run_cornell_scene()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"Running Pathtracer: Lighttree\")\n",
     "run(args_scene + arg_num_samples(100) + [\"-method\", \"lighttree\", \"-name\", \"Lighttree\"] + arg_outdir(\"../Test/Results/\"))"
    ]
@@ -177,6 +217,16 @@
     "show_img(resA)\n",
     "show_img(resB)\n",
     "show_img(resC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_ref = load_image_from_csv(\"../Test/Results/cornell_ref.csv\")\n",
+    "show_img(res_ref)"
    ]
   },
   {
